--- a/ToDoApp/Launch.storyboard
+++ b/ToDoApp/Launch.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="dark"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
@@ -16,43 +16,27 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
-                                <rect key="frame" x="0.0" y="877" width="414" height="0.0"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Just Note it." textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="GJd-Yh-RWb">
-                                <rect key="frame" x="0.0" y="244" width="414" height="112"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="NMQ-L7-lhA">
-                                <rect key="frame" x="175" y="416.5" width="64" height="64"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="noteIcon" translatesAutoresizingMaskIntoConstraints="NO" id="yjj-95-RY9">
+                                <rect key="frame" x="132" y="373" width="150" height="150"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="64" id="5Wx-qM-dvy"/>
-                                    <constraint firstAttribute="height" constant="64" id="wJo-Dc-FaE"/>
+                                    <constraint firstAttribute="height" constant="150" id="S2W-dd-5UE"/>
+                                    <constraint firstAttribute="width" constant="150" id="g86-JW-2Sb"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Just Note It." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Apa-Qi-gTw">
+                                <rect key="frame" x="127.5" y="553" width="159.5" height="37"/>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
+                                <color key="textColor" name="buttonColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
-                        <color key="backgroundColor" name="BackgroundColor"/>
+                        <color key="backgroundColor" name="LaunchScreenColor"/>
                         <constraints>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="obG-Y5-kRd" secondAttribute="centerX" id="5cz-MP-9tL"/>
-                            <constraint firstItem="NMQ-L7-lhA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="AxF-fA-Jst"/>
-                            <constraint firstItem="NMQ-L7-lhA" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="EI2-57-uLo"/>
-                            <constraint firstItem="NMQ-L7-lhA" firstAttribute="top" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="65.5" id="GOf-P5-Gex"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="200" id="JVU-ro-XIy"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="centerX" secondItem="GJd-Yh-RWb" secondAttribute="centerX" id="Q3B-4B-g5h"/>
-                            <constraint firstItem="NMQ-L7-lhA" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="QJr-Mv-oVO"/>
-                            <constraint firstItem="obG-Y5-kRd" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" constant="20" symbolic="YES" id="SfN-ll-jLj"/>
-                            <constraint firstAttribute="bottom" secondItem="obG-Y5-kRd" secondAttribute="bottom" constant="20" id="Y44-ml-fuU"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="200" id="YsR-PX-9Kv"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="bottom" multiplier="1/3" constant="1" id="moa-c2-u7t"/>
-                            <constraint firstItem="NMQ-L7-lhA" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="qT2-3q-IuE"/>
-                            <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" symbolic="YES" id="x7j-FC-K8j"/>
-                            <constraint firstItem="NMQ-L7-lhA" firstAttribute="top" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="60.5" id="yPb-8u-xb1"/>
+                            <constraint firstItem="yjj-95-RY9" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="D8v-hc-hmX"/>
+                            <constraint firstItem="yjj-95-RY9" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Stz-IV-U6a"/>
+                            <constraint firstItem="Apa-Qi-gTw" firstAttribute="top" secondItem="yjj-95-RY9" secondAttribute="bottom" constant="30" id="ftH-N8-CyM"/>
+                            <constraint firstItem="Apa-Qi-gTw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="tzr-fr-Vkr"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -62,9 +46,12 @@
         </scene>
     </scenes>
     <resources>
-        <image name="launchIcon" width="64" height="64"/>
-        <namedColor name="BackgroundColor">
-            <color red="0.88889300819999995" green="0.77249652150000003" blue="0.46749973299999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        <image name="noteIcon" width="512" height="512"/>
+        <namedColor name="LaunchScreenColor">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="buttonColor">
+            <color red="0.84399998188018799" green="0.84600001573562622" blue="0.95899999141693115" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
         </namedColor>
     </resources>
 </document>
